--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,4 @@
 @import url("animation.css");
-
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;400;600;800&display=swap');
 
 * {
@@ -159,6 +158,7 @@ a {
     justify-content: center;
     font-size: 10em;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    cursor: pointer;
 }
 
 .content-item:hover {
@@ -190,6 +190,7 @@ a {
     text-transform: uppercase;
     font-weight: 600;
     border-radius: 2px;
+    cursor: pointer;
 }
 .project-btn:hover {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 2px 5px;
@@ -299,6 +300,8 @@ div.contact-info {
     background-color: transparent;
     border: transparent;
     border-bottom: solid 1px #2B2730;
+    font-size: 1em;
+    outline: none;
 }
 .form-input::placeholder {
     padding-left: 5px;
@@ -313,6 +316,7 @@ div.contact-info {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     font-size: 1em;
     font-weight: 600;
+    cursor: pointer;
 }
 .form-button:hover {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 2px 5px;
